# Agentic_AI_Learnloop_demo

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
core/: agents.py  analyse_log.py  authentication.py  evaluations.py  midleware.py  models.py  serializers.py  tasks.py  urls.py  views.py
core/migrations/: 0001_initial.py
learnloop/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conf_test.py  test_agents.py  test_evaluations.py
